# Lumin-Desktop

./: .eslintrc.json  .prettierrc.json  .releaserc  CHANGELOG.md  README.md  index.html  jsdoc.conf.json  lumin.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  ui.config.json  vite.config.ts
.github/: FUNDING.yml
.github/scripts/: prepareCMD.sh  setup-linux.sh  setup-mac.sh  setup-windows.ps1
.github/workflows/: README.md  build.yml
extras/grapesjs_template_1708262353140/: index.html
extras/grapesjs_template_1708262353140/css/: style.css
src/: App.tsx  app.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/config/: config.json
src-tauri/src/: main.rs
src-tauri/src/lib/api/: Cargo.toml  package.json  tauri-plugin-request-client.ts
src-tauri/src/lib/api/src/: lib.rs
src-tauri/src/lib/splashscreen/: Cargo.toml
src-tauri/src/lib/splashscreen/src/: lib.rs
src-tauri/src/lib/util/: Cargo.toml
src-tauri/src/lib/util/src/: errors.rs  logger.rs  prelude.rs
src-tauri/src/modules/: menu.rs  tauri_commands.rs
src/components/: CustomSlideAnimation.tsx  Dashboard.tsx  DeviceSettings.tsx  EraseButton.tsx  Header.tsx  OpenDocs.tsx  Popover.tsx  Titlebar.tsx  WebSerial.tsx  WebSocketHandler.tsx
src/components/AppSettings/: Button.tsx  DeveloperSettings.tsx  DeviceConfig.tsx  FlashFirmware.tsx
src/components/AppUpdater/: styles.css
src/components/Buttons/: CustomButton.tsx  DownloadAssetsButton.tsx  EraseButton.tsx  EspWebButton.tsx
src/components/Dashboard/: index.css  index.tsx
src/components/DebugMode/Debug/: index.tsx
src/components/DebugMode/DebugMode/: index.tsx
src/components/Device/: CreateDevice.tsx  WIFIStrength.tsx  WifiStrength.tsx  index.css  index.tsx
src/components/FirmwareSelection/: FirmwareList.tsx  styles.css
src/components/Header/: index.tsx
src/components/Header/CustomPopover/: index.tsx
src/components/List/: CreateListDevice.tsx  List.tsx  ListHeader.tsx
src/components/Loader/: styles.css
src/components/MainMenu/: MainMenuContent.tsx  MenuItem.tsx
src/components/Modal/: FormActions.tsx  ModalContent.tsx  ModalSettings.tsx  ModalTabs.tsx  index.tsx
src/components/Notifications/: CustomToast.tsx
src/components/ProgressBar/: styles.css
src/components/QuestionMark/: QuestionMark.tsx
src/components/Selection/: FirmwareList.tsx
src/components/Settings/: DeviceSettingUtil.tsx  DeviceSettings.tsx  DeviceStatus.tsx  GeneralSettings.tsx  LEDSettings.tsx  NetworkSettings.tsx
src/components/Settings/AppSettings/: DeveloperSettings.tsx  DeviceConfig.tsx  FirmwareSelection.tsx  index.css
src/components/Settings/LEDControl/: LEDBehavior.tsx  LEDBehaviour.tsx  LEDOptions.tsx  index.tsx
src/components/ui/: accordion.tsx  dialog.tsx  icon.tsx  input.tsx  popover.tsx  select.tsx  switch.tsx
src/containers/: FlashFirmware.tsx  Header.tsx
src/lib/: index.tsx  utils.ts
src/pages/: APMode.tsx  ComingSoon.tsx  DeviceSettings.tsx  FlashFirmware.tsx  PageWrapper.tsx  Settings.tsx  home.tsx  page404.tsx  settings.tsx  welcome.tsx
src/routes/: index.tsx
src/static/: enums.ts  genTypes.ts  index.ts  types.ts  uniqueArray.ts
src/store/context/: api.tsx  app.tsx  device.tsx  deviceCheck.tsx  deviceSettings.tsx  main.tsx  notifications.tsx  ui.tsx
src/styles/: buttons.css  imports.css  index.css  login-imports.css  titlebar.css
src/styles/components/: burger.css  header-wrapper.css  popover.css  sidebar.css
