[package]
name = "lumin-desktop"
version = "1.0.1"
description = "Lumin Desktop is a desktop application for the Lumin platform. It allows you to manage your Lumin devices, create and manage your Lumin account, and more."
authors = ["DaOfficialWizard"]
license = "MIT"
repository = "https://github.com/AGL-Electronics/Lumin-Desktop"
default-run = "lumin-desktop"
edition = "2021"
rust-version = "1.69"

[dependencies]
sysinfo = "0.29.11"

[dependencies.tauri-plugin-splashscreen]
path = "src/lib/splashscreen"

[dependencies.tauri-plugin-request-client]
path = "src/lib/api"

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[dependencies.tauri-plugin-upload]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[dependencies.tauri-plugin-oauth]
workspace = true

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tauri]
workspace = true

[dependencies.log]
workspace = true

[dependencies.specta]
workspace = true

[dependencies.dialoguer]
workspace = true

[dependencies.tauri-specta]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.tiny_http]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.url]
workspace = true

[dependencies.thiserror]
workspace = true

[workspace]
members = ["src/lib/util", "src/lib/splashscreen", "src/lib/api"]

[workspace.dependencies]
anyhow = "1.0.81"
url = "2.5.0"
dialoguer = "0.11.0"
log = "0.4.21"
thiserror = "1.0.58"
tiny_http = "0.12.0"
serde_json = "1"

[workspace.dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json", "stream"]

[workspace.dependencies.serde]
version = "1.0.197"
features = ["derive"]

[workspace.dependencies.specta]
version = "2.0.0-rc.7"
features = ["functions", "tauri"]

[workspace.dependencies.tauri-specta]
version = "2.0.0-rc.4"
features = ["javascript", "typescript"]

[workspace.dependencies.tauri-plugin-oauth]
git = "https://github.com/FabianLars/tauri-plugin-oauth"
branch = "main"

[workspace.dependencies.tauri]
version = "1.6"
features = ["process-exit", "protocol-asset", "fs-all", "dialog-all", "http-all", "icon-ico", "notification-all", "os-all", "path-all", "process-relaunch", "system-tray", "window-center", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-request-user-attention", "window-set-decorations", "window-set-focus", "window-set-fullscreen", "window-set-position", "window-set-resizable", "window-set-size", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
updater = ["tauri/updater"]

[build-dependencies.tauri-build]
version = "1.5"
features = []

[profile]
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
